# multi-agent-patterns

./: .env.example  .gitignore  Claude.md  README.md  RESEARCH_AND_PLAN.md  pyproject.toml  test_e2e.py
.devcontainer/: Dockerfile  devcontainer.json
docs/: AUTONOMOUS_PATTERN.md  BLOG_POST_PLAN.md  DESIGN_PHILOSOPHY.md  EVENT_LOOP_EXPLAINED.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_STATUS.md  NEXT_STEPS.md  PART3_NEXT_STEPS.md  PLANNER_DAG_PATTERN.md  PLANNER_STATUS_REPORT.md  RESEARCH_AND_PLAN.md  V2_IMPLEMENTATION_LOG.md  V2_IMPLEMENTATION_PLAN.md
docs/blog/: part1_architecture.md  part2_autonomous.md  part2_goal_aware.md  part3_planner.md
output/: kamado-bone-in-leg-of-lamb-medium-rare.md  kamado-pork-loin-roast-chuds-fork-embers.md  kamado_pork_loin_roast_youtube_techniques.md
src/youtube_agent/: __init__.py
src/youtube_agent/agents/: __init__.py  client.py  context.py  main.py  orchestrator.py  search_agent.py  status.py  summarize_agent.py  transcript_agent.py  writer_agent.py
src/youtube_agent/cli/: __init__.py  main.py
src/youtube_agent/infra/: __init__.py  client.py  context.py
src/youtube_agent/models/: __init__.py  config.py  storage.py  transcript.py
src/youtube_agent/services/: __init__.py  storage.py  summarizer.py  youtube.py
src/youtube_agent/tools/: __init__.py  search.py  storage.py  summarize.py  transcript.py  writer.py
src/youtube_agent_orchestrator/: __init__.py
src/youtube_agent_orchestrator/agents/: __init__.py  orchestrator.py  search_agent.py  summarize_agent.py  transcript_agent.py  writer_agent.py
src/youtube_agent_orchestrator/application/: __init__.py  cli.py  main.py
src/youtube_agent_orchestrator/cli/: __init__.py  commands.py  main.py  status.py
src/youtube_agent_orchestrator/infra/: __init__.py  client.py  context.py  http_client.py
src/youtube_agent_orchestrator/models/: __init__.py  search.py  storage.py  youtube.py
src/youtube_agent_orchestrator/services/: __init__.py  storage.py  summarizer.py  youtube.py
src/youtube_agent_orchestrator/tools/: __init__.py  search.py  storage.py  summarize.py  transcript.py  youtube.py
src/youtube_agent_planner/: __init__.py  main.py
src/youtube_agent_planner/agents/: __init__.py  planner.py
src/youtube_agent_planner/application/: __init__.py  cli.py
src/youtube_agent_planner/cli/: __init__.py  commands.py  main.py
src/youtube_agent_planner/infra/: __init__.py  dag_executor.py
src/youtube_agent_planner/patterns/: __init__.py  dag_executor.py
src/youtube_agent_v2/: __init__.py
src/youtube_agent_v2/agents/: __init__.py  planner.py  search.py  summarize.py  synthesizer.py  transcript.py  writer.py
src/youtube_agent_v2/cli/: __init__.py  main.py
src/youtube_agent_v2/core/: __init__.py  base_agent.py  intent_router.py  loop_detector.py  registry.py  session.py  task_queue.py
src/youtube_agent_v2/core/models/: __init__.py  handoff.py
src/youtube_agent_v2/patterns/: __init__.py  dag_executor.py  dispatcher.py  self_selection.py
src/youtube_autonomous_agents/: __init__.py
src/youtube_autonomous_agents/agents/: __init__.py  base.py  search.py  summarize.py  synthesizer.py  transcript.py  writer.py
src/youtube_autonomous_agents/application/: __init__.py  cli.py  main.py
src/youtube_autonomous_agents/cli/: __init__.py  commands.py  main.py
src/youtube_autonomous_agents/infra/: __init__.py  intent_router.py  loop_detector.py  pool.py  registry.py  task_queue.py
src/youtube_autonomous_agents/models/: __init__.py  handoff.py
src/youtube_goal_agents/: __init__.py
src/youtube_goal_agents/agents/: __init__.py  base.py  search.py  summarize.py  synthesizer.py  transcript.py  writer.py
src/youtube_goal_agents/cli/: __init__.py  commands.py  main.py
src/youtube_goal_agents/infra/: __init__.py  intent_router.py  loop_detector.py  pool.py  registry.py  session.py  task_queue.py
src/youtube_goal_agents/models/: __init__.py  handoff.py  task.py
tests/: __init__.py  benchmark_llm_calls.py  test_agents.py  test_async_parallel.py  test_planner_dag.py  test_search.py  test_storage.py  test_summarize.py  test_transcript.py  test_transcript_integration.py  test_v2_autonomous.py  test_v2_dispatcher.py  test_v2_improvements.py  test_v2_parallel.py  test_v2_planner_dag.py  test_v2_self_selection.py  test_v2_session.py
tests/autonomous/: e2e_test.py  test_agents.py  test_improvements.py  test_session.py
tests/goal_agents/: e2e_test.py  test_agents.py  test_dispatcher_pool.py  test_improvements.py  test_parallel.py  test_session.py
tests/orchestrator/: e2e_test.py  test_agents.py
tests/planner/: e2e_test.py  test_dag.py
tests/services/: test_search.py  test_storage.py  test_summarize.py  test_transcript.py  test_transcript_integration.py
